Made all sites and made buttons clickable
sites done, and all buttons do something.

Implemented firebase, but it dosent work rn.

--- a/index.css
+++ b/index.css
@@ -79,6 +79,14 @@ h4 {
     text-align: center;
 }
 
+.title2 {
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
 .startdiv {
     margin: auto;
     width: 50%;
