--- a/register.css
+++ b/register.css
@@ -24,11 +24,26 @@ a {
     
 }
 
+h5 {
+    color: red;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight:lighter;
+    padding: 0px;
+
+}
+
+.wrong {
+    position: absolute;
+    top: 38%;
+    left: 38%;
+    transform: translate(-50%, -50%);
+}
+
 .loginInput {
     transition: 200ms;
     
     border: solid;
-    border-color: rgba(104, 104, 104, 0);
+    border-color: rgba(255, 3, 3, 0);
     border-width: 1px;
     background-color: rgb(78, 78, 78);
     border-radius: 5px;
