--- a/mainpage.css
+++ b/mainpage.css
@@ -28,3 +28,75 @@ dialog {
     top: -46%;
     color: white;
 }
+
+.dialogbtn {
+    transition: 200ms;
+    background-color: rgb(80, 80, 80);
+    color: white;
+    width: 75%;
+    height: 50px;
+    border: solid;
+    border-color: rgba(0, 0, 0, 0);
+    cursor: pointer;
+    text-align: left;
+    margin: 0 30px;
+    margin-top: 10px;
+    font-size: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    border-radius: 10px;
+}
+
+.menuprofile {
+    position: absolute;
+    top: 32%;
+    left: 1%;
+    width: 45px;
+    height: 40px;
+}
+
+.menuprofile2 {
+    position: absolute;
+    top: 51%;
+    left: 4%;
+    width: 30px;
+    height: 30px;
+}
+
+.menuprofile3 {
+    position: absolute;
+    top: 69%;
+    left: 4%;
+    width: 30px;
+    height: 30px;
+}
+
+.menuprofile4 {
+    position: absolute;
+    top: 14%;
+    left: 4%;
+    width: 40px;
+    height: 40px;
+}
+
+.line {
+    position: absolute;
+    width: 90%;
+    height: 2px;
+    right: 5.5%;
+    top: 28%;
+    
+}
+
+h5 {
+    font-size: 20px;
+    font-weight: lighter;
+    height: 5px;
+    padding: 0px 40px;
+    text-align: center;
+    
+}
+
+.dialogbtn:hover { 
+    transition: 200ms;
+    background-color: rgb(92, 92, 92);
+}
