--- a/index.css
+++ b/index.css
@@ -7,7 +7,6 @@ body {
 
 
 header {
-
     display: flex;
     flex-direction:row-reverse;
     margin: 0 60px;
@@ -24,6 +23,19 @@ header {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     border-color: rgba(0, 0, 0, 0);
     padding: 0 15px;
+}
+
+.headerbutton2 {
+    font-weight:lighter;
+
+    background-color: rgba(255, 255, 255, 0);
+    color: white;
+    cursor: pointer;
+    font-size: 48px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    border-color: rgba(0, 0, 0, 0);
+    padding: 0 15px;
+    text-align: center;
 }
 
 .signup {
