--- a/mainpage.css
+++ b/mainpage.css
@@ -100,3 +100,13 @@ h5 {
     transition: 200ms;
     background-color: rgb(92, 92, 92);
 }
+
+.feeddiv {
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50%;
+    text-align: center;
+    height: 60%;
+}
