--- a/index.css
+++ b/index.css
@@ -1,7 +1,22 @@
 body {
+    overflow-x: hidden;
+    overflow-y: auto;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
     background-color: rgb(54, 54, 54);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: white;
+    width: 100%;
+    height: 100%;
+
+
+}
+
+.container {
+    width: 100%;
+    height: auto;
 }
 
 
@@ -9,7 +24,8 @@ body {
 header {
     display: flex;
     flex-direction:row-reverse;
-    margin: 0 60px;
+    margin: 0 1%;
+    
     
 }
 
@@ -19,10 +35,12 @@ header {
     background-color: rgba(255, 255, 255, 0);
     color: white;
     cursor: pointer;
-    font-size: 22px;
+    font-size: 130%;
+    width: 200%;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     border-color: rgba(0, 0, 0, 0);
-    padding: 0 15px;
+    padding: 0 -25%;
+    margin: 0 -50%;
 }
 
 .headerbutton2 {
@@ -31,10 +49,11 @@ header {
     background-color: rgba(255, 255, 255, 0);
     color: white;
     cursor: pointer;
-    font-size: 48px;
+    font-size: 150%;
+    width: 200%;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     border-color: rgba(0, 0, 0, 0);
-    padding: 0 15px;
+    padding: 0 30%;
     text-align: center;
 }
 
