--- a/mainpage.css
+++ b/mainpage.css
@@ -8,6 +8,55 @@
     background-color: rgba(255, 255, 255, 0);
 }
 
+header {
+    border-bottom: 1px solid white;
+    min-width: auto;
+    width: 110%;
+    margin-left: -10.5%;
+    
+
+}
+
+.post{
+    text-align: left;
+    background-color: rgb(65, 65, 65);
+    border: solid;
+    border-color: rgb(65, 65, 65);
+    border-width: 10px;
+    border-radius: 10px;
+    margin-top: 40px;
+    margin-bottom: 20px;
+    padding: 20px;
+    cursor: pointer;
+    border : 1px solid rgb(75, 75, 75);;
+
+
+
+}
+
+.img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 20px;
+    
+}
+
+.usertext {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    text-align: right;
+    margin-left: 70%;
+}
+
+.postbutton{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0);
+}
+
 .profileimg {
     border-radius: 50%;
     border: solid;
@@ -21,11 +70,11 @@ dialog {
     border: solid;
     border-color: rgba(0, 0, 0, 0);
     border-radius: 20px;
-    width: 200px;
-    height: 300px;
+    width: 15%;
+    height: 45%;
     position: absolute;
     left: 81%;
-    top: -46%;
+    top: -27%;
     color: white;
 }
 
@@ -33,13 +82,13 @@ dialog {
     transition: 200ms;
     background-color: rgb(80, 80, 80);
     color: white;
-    width: 75%;
+    width: 100%;
     height: 50px;
     border: solid;
     border-color: rgba(0, 0, 0, 0);
     cursor: pointer;
-    text-align: left;
-    margin: 0 30px;
+    text-align: center;
+
     margin-top: 10px;
     font-size: 20px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -59,7 +108,7 @@ dialog {
     top: 51%;
     left: 4%;
     width: 30px;
-    height: 30px;
+    height: 30px; 
 }
 
 .menuprofile3 {
@@ -88,13 +137,27 @@ dialog {
 }
 
 h5 {
-    font-size: 20px;
+    font-size: 16px;
     font-weight: lighter;
-    height: 5px;
-    padding: 0px 40px;
-    text-align: center;
+        padding: 20px 40px;
     
 }
+
+h6 {
+    font-size: 30px;
+        padding: 10px 40px;
+        margin-bottom: -30px;
+        margin-left: -20px;
+        margin-top: 0px;
+
+}
+
+.datetext {
+    font-size: 13px;
+    padding: 10px 20px;
+}
+
+
 
 .dialogbtn:hover { 
     transition: 200ms;
@@ -105,8 +168,9 @@ h5 {
     position: absolute;
     top:50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-51%, -50%);
     width: 50%;
-    text-align: center;
     height: 60%;
+    
+
 }
