--- a/post.css
+++ b/post.css
@@ -3,6 +3,11 @@
     
 }
 
+.container {
+    width: 100%;
+    height: 100%;
+}
+
 .upload-button {
     display: inline-block;
     padding: 20px 30px;
@@ -45,8 +50,8 @@
     border-width: 1px;
     background-color: rgb(78, 78, 78);
     border-radius: 5px;
-    width: 300px;
-    height: 50px;
+    width: 80%;
+    height: 10%;
     font-size: 30px;
     color: white;
     padding: 0px 15px;
@@ -72,8 +77,8 @@
     border-width: 1px;
     background-color: rgb(78, 78, 78);
     border-radius: 5px;
-    width: 450px;
-    height: 300px;
+    width: 80%;
+    height: 25%;
     font-size: 30px;
     color: white;
     padding: 0px 15px;
