--- a/mainpage.css
+++ b/mainpage.css
@@ -1,4 +1,5 @@
 .profile {
+    transition: 200ms;
     border-radius: 50%;
     border: solid;
     border: rgba(0, 0, 0, 0);
@@ -8,16 +9,26 @@
     background-color: rgba(255, 255, 255, 0);
 }
 
+.profile:hover {
+    transition: 200ms;
+    transform: scale(1.05);
+}
+
+
 header {
     border-bottom: 1px solid white;
     min-width: auto;
     width: 110%;
     margin-left: -10.5%;
-    
+    position: sticky;
+    top: 0;
+    z-index: 100;
 
 }
 
 .post{
+    transition: 200ms;
+    
     text-align: left;
     background-color: rgb(65, 65, 65);
     border: solid;
@@ -28,10 +39,14 @@ header {
     margin-bottom: 20px;
     padding: 20px;
     cursor: pointer;
-    border : 1px solid rgb(75, 75, 75);;
+    border : 1px solid rgb(75, 75, 75);
+    z-index: 1;
+}
 
-
-
+.post:hover{
+    transition: 200ms;
+    background-color: rgb(70, 70, 70);;
+    transform: scale(1.05);
 }
 
 .img {
@@ -171,6 +186,7 @@ h6 {
     transform: translate(-51%, -50%);
     width: 50%;
     height: 60%;
+    z-index: 1;
     
 
 }
