--- a/post.css
+++ b/post.css
@@ -36,6 +36,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
+    border : 1px solid rgb(75, 75, 75);
     
     
 }
@@ -47,7 +48,7 @@
     
     border: none;
     border-color: rgba(255, 3, 3, 0);
-    border-width: 1px;
+    border-width: 0px;
     background-color: rgb(78, 78, 78);
     border-radius: 5px;
     width: 80%;
