--- a/mainpage.css
+++ b/mainpage.css
@@ -41,6 +41,8 @@ header {
     cursor: pointer;
     border : 1px solid rgb(75, 75, 75);
     z-index: 1;
+    white-space: normal; text-overflow: ellipsis;
+    overflow-wrap: break-word;
 }
 
 .post:hover{
